# Paraphrase-mining-project

./: .gitignore  README.md  main.ipynb  main.py  model.py  modelV2.py  notes projet.docx  pyproject.toml  untitled1.py
enums/: __init__.py  models.py  optimizer.py  scheduler.py
log/: BO_CrossAttention_20-18-33_hp.txt  BO_CrossAttention_20-18-33_metrics.txt  BO_cosFalse_06-42-05_hp.txt  BO_cosFalse_06-42-05_metrics.txt  SBERTv1.txt
paraphrase_detection/: Conversion_text_to_df.py  HPExtraction.py  PlottingV2.py  __init__.py  dataloader.py  hyperparameterselection.py  hyperparametersets.py  logger.py  modelarchitectures.py  plotting.py  split.py  test.py  train.py
