[project]
name = "paraphrase-detection-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"

dependencies = [
    "botorch>=0.16.0",
    "gpytorch>=1.14.2",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytorch-ignite>=0.5.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "torch==2.9.1+cu126",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
